kubernetes/manifests/base/wp-k8s-service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wp-k8s-service
  namespace: wordpress-staging
  labels:
    app: wp-k8s-service
spec:
  type: ClusterIP
  selector:
    app: wp-k8s-service
  ports:
  - name: http
    port: 80
    targetPort: 8000
    protocol: TCP
